Working active class on nav and fixed several layout issues.

--- a/decky/static/sass/_card.scss
+++ b/decky/static/sass/_card.scss
@@ -176,7 +176,7 @@
 	width: calc(25% - 2.47rem - 12px);
 	height: 600px;
 	float: left;
-	margin: 0.5rem;
+	margin: 0 0.5rem 1rem 0.5rem;
 	background: tint($color-background, 3%);
 	border-radius: $border-radius;
 	box-shadow: 0 4px 4px transparentize(shade($color-background, 15%), 0.5);
