--- a/decky/static/sass/_deck.scss
+++ b/decky/static/sass/_deck.scss
@@ -125,7 +125,7 @@
 		display: inline-block;
 		height: 120px;
 		width: calc(33.33333% - 0.5rem - 14px);
-		margin: 0.5rem;
+		margin: 0 0.5rem 1rem 0.5rem;
 		background: tint($color-background, 3%);
 		border-radius: $border-radius;
 		-webkit-box-shadow: 0 4px 4px transparentize(shade($color-background, 15%), 0.5);
@@ -133,7 +133,7 @@
 		cursor: pointer;
 		overflow: hidden;
 		-webkit-transition: none;
-		transition: none;
+						transition: none;
 		white-space: nowrap;
 		background: tint($color-background, 6%);
 		border: 1px solid tint($color-border-strong, 15%);
