--- a/decky/static/sass/_global.scss
+++ b/decky/static/sass/_global.scss
@@ -54,7 +54,10 @@ section {
 	/* Main content section*/
 	width: calc(100% - 2rem);
 	vertical-align: top;
+}
 
+aside + section {
+	margin-top: 100px;
 }
 
 h1,
